MFLT-9619 Add Linux on the "Software & Hardware version" page of the docs (#451)
- Added Linux subsections to the "Software & Hardware version" page.
- Added a new `memfault-device-info` reference page.
- Documented the requirements for the Hardware Version, Software Type and
  Software Version strings in the doc instead of referring to the (outdated)
  HTTP API doc.

--- a/docs/linux/integration-guide.mdx
+++ b/docs/linux/integration-guide.mdx
@@ -225,7 +225,7 @@ Alternatively, in your `local.conf` file:
 PACKAGECONFIG:pn_memfaultd := "plugin_swupdate plugin_collectd plugin_coredump plugin_logging"
 ```
 
-### Add a `memfault-device-info` executable to your build
+### Add a `memfault-device-info` executable to your build {#memfault-device-info}
 
 :::tip
 
