MFLT-9732 add docs for server side dev mode (#456)
* MFLT-9732 add docs for server side dev mode

Extend the customer facing Rate limiting docs to include the new Server side Development mode.

(This should be merged after feature is fully shipped)

* Prettified Code!

* MFLT-9732 add docs for server side dev mode

Extend the customer facing Rate limiting docs to include the new Server side Development mode.

(This should be merged after feature is fully shipped)

* Prettified Code!

* Addressing comments and creating back references

* Prettified Code!

---------

Co-authored-by: oymakutku <utkuoymak@utkus-MacBook-Pro-2.local>
Co-authored-by: utkuoymak <utkuoymak@users.noreply.github.com>

--- a/docs/android/android-getting-started-guide.mdx
+++ b/docs/android/android-getting-started-guide.mdx
@@ -298,6 +298,11 @@ To request a Device Configuration update:
 ./bort_cli.py request-update-config --bort-app-id your.app.id
 ```
 
+There will still be some server-side rate limits present even if device is put
+in dev mode through the SDK. Please refer to
+[Server-side Developer Mode](/docs/platform/rate-limiting/) for more
+information.
+
 ## Upload a bug report
 
 Once the SDK has been enabled, you can manually trigger a bug report to be
