--- a/docs/linux/reference-memfaultctl-cli.mdx
+++ b/docs/linux/reference-memfaultctl-cli.mdx
@@ -51,6 +51,11 @@ To enable developer mode, use `memfaultctl enable-dev-mode`. This setting will
 be persisted across reboots. To disable developer mode, use
 `memfaultctl disable-dev-mode`.
 
+There will still be some server-side rate limits present even if device is put
+in dev mode through the SDK. Please refer to
+[Server-side Developer Mode](/docs/platform/rate-limiting/) for more
+information.
+
 ## `memfaultctl` commands
 
 ### `enable-data-collection`
