[MFLT-9732] QUICKFIX some small issues in previous PR we missed (#457)
* fix some small issues in previous PR we missed

* Prettified Code!

---------

Co-authored-by: utkuoymak <utkuoymak@users.noreply.github.com>

--- a/docs/android/android-getting-started-guide.mdx
+++ b/docs/android/android-getting-started-guide.mdx
@@ -300,8 +300,8 @@ To request a Device Configuration update:
 
 There will still be some server-side rate limits present even if device is put
 in dev mode through the SDK. Please refer to
-[Server-side Developer Mode](/docs/platform/rate-limiting/) for more
-information.
+[Server-side Development Mode](/docs/platform/rate-limiting/#server-side-development-mode)
+for more information.
 
 ## Upload a bug report
 
