--- a/docs/linux/reference-memfaultctl-cli.mdx
+++ b/docs/linux/reference-memfaultctl-cli.mdx
@@ -53,8 +53,8 @@ be persisted across reboots. To disable developer mode, use
 
 There will still be some server-side rate limits present even if device is put
 in dev mode through the SDK. Please refer to
-[Server-side Developer Mode](/docs/platform/rate-limiting/) for more
-information.
+[Server-side Development Mode](/docs/platform/rate-limiting/#server-side-development-mode)
+for more information.
 
 ## `memfaultctl` commands
 
