--- a/docs/linux/integration-guide.mdx
+++ b/docs/linux/integration-guide.mdx
@@ -6,6 +6,7 @@ sidebar_label: Integration Guide
 
 import { ProjectMagicLink } from "@site/src/components/ProjectMagicLink";
 import ProjectAwareCreateAProject from "@site/src/components/ProjectAwareCreateAProject";
+import { EnableServerSideDevelopmentMode } from "@site/src/components/EnableServerSideDevelopmentMode";
 import {
   LinuxBuildSystemOptionsTabs,
   SYSTEM_YOCTO,
@@ -399,6 +400,8 @@ To always enable data collection you can include the key
   and check that your device shows up. If you open the specific device, you
   should be able to find its reboot events under the <b>Reboots</b> tab.
 </p>
+
+<EnableServerSideDevelopmentMode />
 
 ## Integration next-steps
 
