--- a/docs/linux/ota.mdx
+++ b/docs/linux/ota.mdx
@@ -5,6 +5,7 @@ sidebar_label: OTA Management
 ---
 
 import { ProjectMagicLink } from "@site/src/components/ProjectMagicLink";
+import { EnableServerSideDevelopmentMode } from "@site/src/components/EnableServerSideDevelopmentMode";
 import OtaCdnFeaturesAdmonition from "@site/src/pages/_partials/_ota-cdn-features-admonition.mdx";
 
 This tutorial covers how to manage your embedded Linux over-the-air update flow
@@ -206,6 +207,8 @@ mode setting to Cohorts.
   and open its Settings view. In it, select "Development mode: every minute" in
   the hawkBit polling interval section.
 </p>
+
+<EnableServerSideDevelopmentMode />
 
 ### Activate the Release
 
