--- a/docs/mcu/nrf-connect-sdk-guide.mdx
+++ b/docs/mcu/nrf-connect-sdk-guide.mdx
@@ -7,6 +7,7 @@ toc_max_heading_level: 4
 ---
 
 import SendingDataOverUdp from "@site/src/pages/_partials/_sending-data-over-udp.mdx";
+import { EnableServerSideDevelopmentMode } from "@site/src/components/EnableServerSideDevelopmentMode";
 
 import ProjectAwareCreateAProject from "@site/src/components/ProjectAwareCreateAProject";
 import Tabs from "@theme/Tabs";
@@ -383,6 +384,8 @@ void record_temperature(...) {
 ```
 
 ### Publish data to the Memfault cloud
+
+<EnableServerSideDevelopmentMode />
 
 #### (nRF9160) HTTPS
 
