--- a/docs/mcu/zephyr-guide.mdx
+++ b/docs/mcu/zephyr-guide.mdx
@@ -6,6 +6,7 @@ description: Integrate Memfault on Zephyr RTOS.
 ---
 
 import ProjectAwareCreateAProject from "@site/src/components/ProjectAwareCreateAProject";
+import { EnableServerSideDevelopmentMode } from "@site/src/components/EnableServerSideDevelopmentMode";
 
 This tutorial will go over integrating the
 [Memfault Firmware SDK](https://github.com/memfault/memfault-firmware-sdk) into
@@ -176,6 +177,8 @@ The chunks can be pasted into the Chunks Debug panel in the Memfault web
 application:
 
 https://docs.memfault.com/docs/mcu/self-serve/#post-chunks-to-memfault
+
+<EnableServerSideDevelopmentMode />
 
 ## Memfault Configuration
 
