--- a/docs/troubleshooting/data-transfer-troubleshooting.mdx
+++ b/docs/troubleshooting/data-transfer-troubleshooting.mdx
@@ -4,6 +4,8 @@ title: Data Transfer Troubleshooting
 sidebar_label: Data Transfer Troubleshooting
 ---
 
+import { EnableServerSideDevelopmentMode } from "@site/src/components/EnableServerSideDevelopmentMode";
+
 If you encounter any issues in your data transfer implementation, Memfault has
 tools to help debug!
 
@@ -15,3 +17,5 @@ tools to help debug!
   data transfer in isolation.
 - A [GDB Script](/docs/mcu/test-data-collection-with-gdb) which can be installed
   to send chunks programmatically every time a breakpoint is hit.
+
+<EnableServerSideDevelopmentMode />
