--- a/docs/mcu/arm-gcc-guide-coredumps.mdx
+++ b/docs/mcu/arm-gcc-guide-coredumps.mdx
@@ -4,6 +4,8 @@ title: ARM GCC Getting Started Guide
 sidebar_label: ARM GCC Guide
 ---
 
+import { EnableServerSideDevelopmentMode } from "@site/src/components/EnableServerSideDevelopmentMode";
+
 This tutorial will go over integrating the **panics** component of the
 [Memfault Firmware SDK](https://github.com/memfault/memfault-firmware-sdk) into
 a system that is using the
@@ -170,3 +172,5 @@ void send_memfault_data(void) {
   while (try_send_memfault_data()) { }
 }
 ```
+
+<EnableServerSideDevelopmentMode />
