--- a/docs/mcu/arm-iar-guide.mdx
+++ b/docs/mcu/arm-iar-guide.mdx
@@ -4,6 +4,8 @@ title: ARM IAR Getting Started Guide
 sidebar_label: ARM IAR Guide
 ---
 
+import { EnableServerSideDevelopmentMode } from "@site/src/components/EnableServerSideDevelopmentMode";
+
 This tutorial will go over integrating the **panics** component of the
 [Memfault Firmware SDK](https://github.com/memfault/memfault-firmware-sdk) into
 a system using ARM IAR C/C++ Compiler.
@@ -117,3 +119,5 @@ void send_memfault_data(void) {
   while (try_send_memfault_data()) { }
 }
 ```
+
+<EnableServerSideDevelopmentMode />
