--- a/docs/mcu/esp32-guide.mdx
+++ b/docs/mcu/esp32-guide.mdx
@@ -7,6 +7,7 @@ toc_max_heading_level: 4
 ---
 
 import ProjectAwareCreateAProject from "@site/src/components/ProjectAwareCreateAProject";
+import { EnableServerSideDevelopmentMode } from "@site/src/components/EnableServerSideDevelopmentMode";
 
 This tutorial will go over integrating the
 [Memfault Firmware SDK](https://github.com/memfault/memfault-firmware-sdk) into
@@ -350,6 +351,8 @@ inserting an assert that will fail, e.g.
    // [...]
    MEMFAULT_ASSERT(0);
 ```
+
+<EnableServerSideDevelopmentMode />
 
 ### Publish data to the Memfault cloud
 
