Update install-memfault-cli.mdx (#453)
* Update install-memfault-cli.mdx

* Prettified Code!

---------

Co-authored-by: collhar <collhar@users.noreply.github.com>

--- a/docs/ci/install-memfault-cli.mdx
+++ b/docs/ci/install-memfault-cli.mdx
@@ -11,7 +11,8 @@ The Memfault CLI tool is a simple command-line program which purpose is to make
 integrations with the Memfault cloud from other systems, like continuous
 integration servers, as easy as possible.
 
-Under the hood, the tool acts as a client to [Memfault's HTTP API](/api).
+Under the hood, the tool acts as a client to
+[Memfault's HTTP API](https://api-docs.memfault.com/).
 
 The Memfault CLI tool is written in Python and published publicly in the
 [Python Package Index (pypi)](https://pypi.org/project/memfault-cli/).
